unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/npsp__Partial_Soft_Credit__c.object-meta.xml
<CustomObject>
    <label>Partial Soft Credit</label>
    <nameField>
        <displayFormat>PSC-{0000}</displayFormat>
        <label>Partial Soft Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partial Soft Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>