unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Returns Contact ID for related Contact.</description>
    <formula>npsp__Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that returns Contact ID for related Contact.</inlineHelpText>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>