unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Legacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Name__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Legacy Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>