unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/npsp__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Contact_Name__c</fullName>
    <description>The full name of the Contact who gets this soft credit (read only).</description>
    <formula>HYPERLINK('/' + npsp__Contact__c,npsp__Contact__r.FirstName + ' ' + npsp__Contact__r.LastName, '_self')</formula>
    <inlineHelpText>The full name of the Contact who gets this soft credit (read only).</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>