unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/OCR_ID__c.field-meta.xml
<CustomField>
    <fullName>OCR_ID__c</fullName>
    <description>Created as a Heller Data Migration 2021.</description>
    <label>OCR ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>