unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Returns Close Date of related Opportunity.</description>
    <formula>npsp__Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Close Date of related Opportunity.</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>