unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Opportunity_Contact_ID_from_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_ID_from_Formula__c</fullName>
    <description>If Soft Credit returns SC Contact ID, otherwise Opp Contact ID.</description>
    <formula>IF(ISBLANK(npsp__Opportunity__r.npe01__Contact_Id_for_Role__c), npsp__Contact__r.Id, "Fish")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEL_Opportunity Contact ID from Formula</label>
    <type>Text</type>
</CustomField>