unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Opportunity_Values_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Values_Changed_Date__c</fullName>
    <inlineHelpText>Using this field to help trigger recalculation of DLRS rollups.</inlineHelpText>
    <label>Opportunity Values Changed Date</label>
    <type>Date</type>
</CustomField>