unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Sys_Contact_Gift_Count__c.field-meta.xml
<CustomField>
    <fullName>Sys_Contact_Gift_Count__c</fullName>
    <description>Returns Contact Lifetime Gift Count for DLRS filtering.</description>
    <formula>npsp__Contact__r.Lifetime_Gift_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Contact Gift Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>