unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Sys_DLRS_Stage_Check__c.field-meta.xml
<CustomField>
    <fullName>Sys_DLRS_Stage_Check__c</fullName>
    <description>Checks if Opp Stage value meets basic DSLR rollup criteria.</description>
    <formula>IF(
    AND(
         npsp__Opportunity__r.RecordType.DeveloperName  &lt;&gt;  'Planned_Gift',
         npsp__Opportunity__r.RecordType.DeveloperName  &lt;&gt;  'InKindGift',
        OR(
            ISPICKVAL(npsp__Opportunity__r.StageName, 'Received as Conditional Pledge'),
            ISPICKVAL(npsp__Opportunity__r.StageName, 'Received'),
            ISPICKVAL (npsp__Opportunity__r.StageName, 'Received as Unconditional Pledge')
            )
        
        ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-DLRS Stage/Rec Type Check</label>
    <type>Checkbox</type>
</CustomField>