unpackaged/main/default/objects/npsp__Partial_Soft_Credit__c/fields/Sys_Role_Check__c.field-meta.xml
<CustomField>
    <fullName>Sys_Role_Check__c</fullName>
    <description>Checks if Role Name is one of the types to include in Soft Credit rollups.</description>
    <formula>npsp__Role_Name__c = 'Funder - Soft Credit' ||
npsp__Role_Name__c = 'DAF' ||
npsp__Role_Name__c = 'Workplace Giving' ||
npsp__Role_Name__c = 'Sponsor' ||
npsp__Role_Name__c = 'Agency'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Role Check</label>
    <type>Checkbox</type>
</CustomField>